# ncds-opus-studio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.010-reading-confidence-assets/: beats.js  example-entry.html  example-narration.txt  pic_gen.py  render.mjs  tts_gen.py
configs/: package-lock.json  package.json  requirements-bootstrap.txt
configs/openclaw-examples/: config.example.json  openclaw.example.json
docs/: FEISHU-REFACTOR.md  MIGRATION.md
gpt_image/: generate.py  generate_edit.py  gpt_image_edit.py  gpt_image_gen.py
pipelines/douyin_processing/: download_and_transcribe.py  final_processor.py  simple_processor.py  test_download.py
scripts/: asr_command_runner.mjs  asr_command_runner.test.mjs  content_rewrite_runner.mjs  content_rewrite_runner.test.mjs  feishu_sdk_adapter.mjs  feishu_sdk_adapter.test.mjs  install_map_watchdog.sh  lark_cli.mjs  map_project.py  map_project_watchdog.py  media_command_router_contract.test.mjs  paper_card_talk_profile.test.mjs  rewrite_command_runner.mjs  rewrite_command_runner.test.mjs  rewrite_profiles.mjs  video_job_worker.mjs  video_job_worker.test.mjs  video_rewrite_runner.mjs  video_rewrite_runner.test.mjs
skills/: tingwu-asr.skill
skills/asr/: SKILL.md
skills/douyin-copywriting/: SKILL.md
skills/douyin-copywriting/references/: douyin-copy-rules.md
skills/douyin-downloader/scripts/: douyin_download.py  douyin_download_test.py
skills/rewrite/: SKILL.md
skills/tingwu-asr/: SKILL.md
skills/toutiao-rewrite/: SKILL.md
skills/video/: SKILL.md
skills/video-pipeline/: SKILL.md
skills/video_hq/: SKILL.md
src/ncds_opus_factory/: __init__.py  __main__.py  cli.py
tests/server/: test_jobs_route.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/api/: client.ts  (+1 more)
(+143 files in other folders)
