[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ncds-opus-factory"
version = "0.1.0"
description = "Five-command media engine + reusable video templates for ncds content production. No direct Feishu API calls — all Feishu IO goes through lark-cli."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "yt-dlp>=2024.1",
    "openai-whisper>=20231117",
    "python-docx>=1.1",
    "dashscope>=1.20",
    "Pillow>=10",
    # HTTP server 包装层（暴露 commands 为 POST + SSE）
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2",
    "pydantic>=2",
    # .env 加载（仓库根 .env，server 启动时优先于其它 import 触发）
    "python-dotenv>=1.0",
]

[project.scripts]
ncds-opus-factory = "ncds_opus_factory.cli:main"
nof = "ncds_opus_factory.cli:main"
nof-server = "ncds_opus_factory.server.app:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
